implementazione richieste otm backend, risolto problema evenet handler multipli

--- a/server/app/index.html
+++ b/server/app/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row">
             <div class="col" tag="planner">
-                planner
+                <div>planner</div>
             </div>
             <div class="col">
                 <div id="buttons">
@@ -30,7 +30,7 @@
                     <button id="foods" type="button" class="btn btn-primary btn-sm">Food</button>
                     <button id="religion" type="button" class="btn btn-primary btn-sm">Church</button>
                     <button id="natural" type="button" class="btn btn-primary btn-sm">Nature</button>
-                    <button id="architecture" type="button" class="btn btn-primary btn-sm">prova</button>
+                    <button id="architecture" type="button" class="btn btn-primary btn-sm">Architecture</button>
                 </div>
                 <div id="info">
                 </div>
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    
+
 
 
     <script src="./bootstrap-5.1.3/dist/js/bootstrap.min.js"></script>
