aggiunta possibilità di inviare dati realtivi ai punti di interesse scelti dall'utente

--- a/server/app/index.html
+++ b/server/app/index.html
@@ -21,12 +21,13 @@
       </nav>
     <div class="container">
         <div class="row">
-            <div class="col" tag="planner">
-                <div>planner</div>
+            <div class="col">
+                <div id="planner" class="box"></div>
+                <button id="send" type="button" class="btn btn-primary btn-sm">Send</button>
             </div>
             <div class="col">
                 <div id="buttons">
-                    <button id="museums" type="button" class="btn btn-primary btn-sm" value="none">Museum</button>
+                    <button id="museums" type="button" class="btn btn-primary btn-sm" >Museum</button>
                     <button id="foods" type="button" class="btn btn-primary btn-sm">Food</button>
                     <button id="religion" type="button" class="btn btn-primary btn-sm">Church</button>
                     <button id="natural" type="button" class="btn btn-primary btn-sm">Nature</button>
