implementata creazione box per ogni giorno di viaggio

--- a/server/app/planner.html
+++ b/server/app/planner.html
@@ -21,11 +21,11 @@
       </nav>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col" id="left">
                 <div id="planner" class="box"></div>
                 <button id="send" type="button" class="btn btn-primary btn-sm">Send</button>
             </div>
-            <div class="col">
+            <div class="col" id="center">
                 <div id="buttons">
                     <button id="museums" type="button" class="btn btn-primary btn-sm" >Museum</button>
                     <button id="foods" type="button" class="btn btn-primary btn-sm">Food</button>
@@ -36,7 +36,7 @@
                 <div id="info">
                 </div>
             </div>
-            <div class="col">
+            <div class="col" id="right">
                 <div id="map"></div>
             </div>
         </div>
