--- a/server/app/planner.html
+++ b/server/app/planner.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Progetto RC/LTW</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./bootstrap-5.1.3/dist/css/bootstrap.min.css"/>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.js"></script>
@@ -18,14 +18,12 @@
                 Trip Planner
           </a>
         </div>
-      </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col" id="left">
-                <div id="planner" class="box"></div>
-                <button id="send" type="button" class="btn btn-primary btn-sm">Send</button>
+    </nav>
+    <div id="container">
+            <div id="right">
+                <div id="map"></div>
             </div>
-            <div class="col" id="center">
+            <div id="center">
                 <div id="buttons">
                     <button id="museums" type="button" class="btn btn-primary btn-sm" >Museum</button>
                     <button id="foods" type="button" class="btn btn-primary btn-sm">Food</button>
@@ -36,14 +34,11 @@
                 <div id="info">
                 </div>
             </div>
-            <div class="col" id="right">
-                <div id="map"></div>
+            <div id="left" >
+                <button id="send" type="button" class="btn btn-primary btn-sm">Send</button>
+                <div id="days"></div>
             </div>
-        </div>
     </div>
-
-
-
     <script src="./bootstrap-5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
 </body>
