--- a/server/app/planner.html
+++ b/server/app/planner.html
@@ -35,7 +35,9 @@
                 </div>
             </div>
             <div id="left" >
-                <button id="send" type="button" class="btn btn-primary btn-sm">Send</button>
+                <div id="commands">
+                    <button id="send" type="button" class="btn btn-primary btn-sm">Send</button>
+                </div>
                 <div id="days"></div>
             </div>
     </div>
