Aggiunti: tasto per clonare, tasto per mostrare info, tasto per visualizzare planning del giorno

--- a/server/app/planner.html
+++ b/server/app/planner.html
@@ -25,11 +25,11 @@
             </div>
             <div id="center">
                 <div id="buttons">
-                    <button id="museums" type="button" class="btn btn-primary btn-sm" >Museum</button>
-                    <button id="foods" type="button" class="btn btn-primary btn-sm">Food</button>
-                    <button id="religion" type="button" class="btn btn-primary btn-sm">Church</button>
-                    <button id="natural" type="button" class="btn btn-primary btn-sm">Nature</button>
-                    <button id="architecture" type="button" class="btn btn-primary btn-sm">Architecture</button>
+                    <button id="museums" type="button" class="btn btn-primary btn-sm filter" >Museum</button>
+                    <button id="foods" type="button" class="btn btn-primary btn-sm filter">Food</button>
+                    <button id="religion" type="button" class="btn btn-primary btn-sm filter">Church</button>
+                    <button id="natural" type="button" class="btn btn-primary btn-sm filter">Nature</button>
+                    <button id="architecture" type="button" class="btn btn-primary btn-sm filter">Architecture</button>
                 </div>
                 <div id="info">
                 </div>
