implementata aggiunta di giorni del viaggio direttamente dal planner

--- a/server/app/planner.html
+++ b/server/app/planner.html
@@ -60,6 +60,7 @@
             <div id="left" >
                 <div id="commands">
                     <button id="send" type="button" class="input_style_sm"></button>
+                    <button id="addDay" type="button" class="input_style_sm"></button>
                 </div>
                 <div id="days"></div>
             </div>
