--- a/server/app/planner.html
+++ b/server/app/planner.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./bootstrap-5.1.3/dist/css/bootstrap.min.css"/>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.js"></script>
+    <script src="https://kit.fontawesome.com/523d908d11.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://opentripmap.io/js/directory.en.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.css"/>
     <link rel="stylesheet" href="style.css"/>
@@ -59,8 +60,8 @@
             </div>
             <div id="left" >
                 <div id="commands">
-                    <button id="send" type="button" class="input_style_sm"></button>
-                    <button id="addDay" type="button" class="input_style_sm"></button>
+                    <button id="send" type="button" class="input_style_sm"><i class="fa-regular fa-floppy-disk fa-lg"></i></button>
+                    <button id="addDay" type="button" class="input_style_sm"><i class="fa-regular fa-square-plus fa-lg"></i></button>
                 </div>
                 <div id="days"></div>
             </div>
