fix grafici e upgrade automatico da http a https in nginx

--- a/node/src/apidoc/index.html
+++ b/node/src/apidoc/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>window title</title>
-  <meta name="description" content="description">
+  <title>Trip-Planner - API</title>
+  <meta name="description" content="API to interact with the Trip-Planner itinerary database. 
+ To use this API a key is required. To get an API key create a Trip-Planner account">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link href="assets/bootstrap.min.css" rel="stylesheet" media="screen">
